[package]
name = "bridge"
version = "0.1.0"
authors = ["Christoph <gaoler@electronicpanopticon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"

[dependencies.clap]
version = "3.0.0-beta.1"
features = ["yaml"]

[dependencies.nom]
version = "^5"
features = ["regexp"]